--- a/app/src/main/res/layout/activity_crear_gasto.xml
+++ b/app/src/main/res/layout/activity_crear_gasto.xml
@@ -1,86 +1,98 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/crear_gasto"
+    android:id="@+id/activity_crear_gasto_ll_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoActivity">
 
-    <EditText
-        android:id="@+id/descripcion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/fecha"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/fecha"
-        android:layout_marginTop="48dp"
-        android:layout_toLeftOf="@+id/datePicker"
-        android:hint="@string/descripcion" />
+    <RelativeLayout
+        android:id="@+id/activity_crear_gasto_rl_descripcion"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1">
 
-    <EditText
-        android:id="@+id/fecha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/categoria"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="68dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginStart="43dp"
-        android:clickable="false"
-        android:ems="10"
-        android:hint="@string/fecha"
-        android:inputType="date" />
+        <EditText
+            android:id="@+id/activity_crear_gasto_et_descripcion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:hint="@string/descripcion" />
+    </RelativeLayout>
 
-    <ImageButton
-        android:id="@+id/datePicker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/fecha"
-        android:layout_toEndOf="@+id/fecha"
-        android:layout_toRightOf="@+id/fecha"
-        android:contentDescription="@string/calendario"
-        android:onClick="mostrarDatePicker"
-        android:src="@drawable/ic_calendar" />
+    <RelativeLayout
+        android:id="@+id/activity_crear_gasto_rl_fecha"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1">
 
-    <Spinner
-        android:id="@+id/categoria"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/fecha"
-        android:layout_alignStart="@+id/fecha"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/datePicker"
-        android:layout_toStartOf="@+id/datePicker"
-        android:entries="@array/categorias"
-        android:hint="@string/categoria"
-        android:prompt="@string/categoria" />
+        <EditText
+            android:id="@+id/activity_crear_gasto_et_fecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:ems="10"
+            android:hint="@string/fecha"
+            android:inputType="date" />
 
-    <EditText
-        android:id="@+id/activity_crear_gasto_programable_et_importe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/categoria"
-        android:layout_alignStart="@+id/categoria"
-        android:layout_below="@+id/categoria"
-        android:layout_marginTop="71dp"
-        android:ems="10"
-        android:hint="@string/importe"
-        android:inputType="numberDecimal" />
+        <ImageButton
+            android:id="@+id/activity_crear_gasto_ib_date_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/activity_crear_gasto_et_fecha"
+            android:layout_toEndOf="@+id/activity_crear_gasto_et_fecha"
+            android:layout_toRightOf="@+id/activity_crear_gasto_et_fecha"
+            android:onClick="mostrarDatePicker"
+            android:src="@drawable/ic_calendar" />
+        />
+    </RelativeLayout>
 
-    <Button
-        android:id="@+id/guardar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/activity_crear_gasto_programable_et_importe"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="59dp"
-        android:onClick="guardarGasto"
-        android:text="@string/guardar" />
+    <RelativeLayout
+        android:id="@+id/activity_crear_gasto_rl_categoria"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1">
 
-</RelativeLayout>
+        <Spinner
+            android:id="@+id/activity_crear_gasto_sp_categoria"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:entries="@array/categorias" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/activity_crear_gasto_rl_importe"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1">
+
+        <EditText
+            android:id="@+id/activity_crear_gasto_et_importe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:ems="10"
+            android:hint="@string/importe"
+            android:inputType="numberDecimal" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/activity_crear_gasto_rl_guardar"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/activity_crear_gasto_bt_guardar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:onClick="guardarGasto"
+            android:text="@string/guardar" />
+    </RelativeLayout>
+</LinearLayout>
