--- a/app/src/main/res/layout/activity_crear_objetivo.xml
+++ b/app/src/main/res/layout/activity_crear_objetivo.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:inputType="date"
         android:ems="10"
-        android:id="@+id/fecha"
+        android:id="@+id/activity_crear_gasto_et_fecha"
         android:hint="@string/fecha"
         android:clickable="false"
         android:layout_below="@+id/activity_crear_gasto_programable_et_importe"
@@ -34,13 +34,13 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/datePicker"
+        android:id="@+id/activity_crear_gasto_ib_date_picker"
         android:src="@drawable/ic_calendar"
         android:contentDescription="@string/calendario"
         android:onClick="mostrarDatePicker"
-        android:layout_alignBottom="@+id/fecha"
-        android:layout_toRightOf="@+id/fecha"
-        android:layout_toEndOf="@+id/fecha" />
+        android:layout_alignBottom="@+id/activity_crear_gasto_et_fecha"
+        android:layout_toRightOf="@+id/activity_crear_gasto_et_fecha"
+        android:layout_toEndOf="@+id/activity_crear_gasto_et_fecha" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -48,16 +48,16 @@
         android:id="@+id/duracion"
         android:hint="@string/duracion"
         android:layout_marginTop="41dp"
-        android:layout_below="@+id/fecha"
-        android:layout_alignLeft="@+id/fecha"
-        android:layout_alignStart="@+id/fecha"
-        android:layout_toLeftOf="@+id/datePicker"
-        android:layout_toStartOf="@+id/datePicker" />
+        android:layout_below="@+id/activity_crear_gasto_et_fecha"
+        android:layout_alignLeft="@+id/activity_crear_gasto_et_fecha"
+        android:layout_alignStart="@+id/activity_crear_gasto_et_fecha"
+        android:layout_toLeftOf="@+id/activity_crear_gasto_ib_date_picker"
+        android:layout_toStartOf="@+id/activity_crear_gasto_ib_date_picker" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/descripcion"
+        android:id="@+id/activity_crear_gasto_et_descripcion"
         android:layout_marginTop="30dp"
         android:hint="@string/descripcion"
         android:layout_below="@+id/duracion"
@@ -73,6 +73,6 @@
         android:id="@+id/guardar"
         android:onClick="guardarObjetivo"
         android:layout_marginTop="38dp"
-        android:layout_below="@+id/descripcion"
+        android:layout_below="@+id/activity_crear_gasto_et_descripcion"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
