--- a/app/src/main/res/layout/activity_crear_gasto_favorito.xml
+++ b/app/src/main/res/layout/activity_crear_gasto_favorito.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -6,50 +6,67 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
-    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoFavoritoActivity">
+    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoFavoritoActivity"
+    android:id="@+id/activity_crear_gasto_favorito_ll_main"
+    android:orientation="vertical">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/activity_crear_gasto_programable_et_importe"
-        android:layout_marginTop="43dp"
-        android:hint="@string/importe"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/activity_crear_gasto_favorito_rl_descripcion"
+        android:layout_weight="1">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/activity_crear_gasto_sp_categoria"
-        android:hint="@string/categoria"
-        android:layout_marginTop="39dp"
-        android:layout_below="@+id/activity_crear_gasto_programable_et_importe"
-        android:layout_alignRight="@+id/activity_crear_gasto_programable_et_importe"
-        android:layout_alignEnd="@+id/activity_crear_gasto_programable_et_importe"
-        android:layout_alignLeft="@+id/activity_crear_gasto_programable_et_importe"
-        android:layout_alignStart="@+id/activity_crear_gasto_programable_et_importe" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/activity_crear_gasto_favorito_et_descripcion"
+            android:layout_centerInParent="true"
+            android:hint="@string/descripcion" />
+    </RelativeLayout>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/activity_crear_gasto_et_descripcion"
-        android:layout_marginTop="45dp"
-        android:hint="@string/descripcion"
-        android:layout_below="@+id/activity_crear_gasto_sp_categoria"
-        android:layout_alignLeft="@+id/activity_crear_gasto_sp_categoria"
-        android:layout_alignStart="@+id/activity_crear_gasto_sp_categoria"
-        android:layout_alignRight="@+id/activity_crear_gasto_sp_categoria"
-        android:layout_alignEnd="@+id/activity_crear_gasto_sp_categoria" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/activity_crear_gasto_favorito_rl_categoria"
+        android:layout_weight="1">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/guardar"
-        android:id="@+id/guardar"
-        android:layout_marginTop="61dp"
-        android:layout_below="@+id/activity_crear_gasto_et_descripcion"
-        android:layout_centerHorizontal="true"
-        android:onClick="guardarGastoFavorito" />
-</RelativeLayout>
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/activity_crear_gasto_favorito_sp_categoria"
+            android:layout_centerInParent="true"
+            android:entries="@array/categorias" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/activity_crear_gasto_favorito_rl_importe"
+        android:layout_weight="1">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:ems="10"
+            android:id="@+id/activity_crear_gasto_favorito_et_importe"
+            android:layout_centerInParent="true"
+            android:hint="@string/importe" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/activity_crear_gasto_favorito_rl_guardar"
+        android:layout_weight="1">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/guardar"
+            android:id="@+id/activity_crear_gasto_favorito_bt_guardar"
+            android:layout_centerInParent="true"
+            android:onClick="guardarGastoFavorito" />
+    </RelativeLayout>
+
+</LinearLayout>
