Crear Objetivo activity and layout fixed

--- a/app/src/main/res/layout/activity_crear_gasto_favorito.xml
+++ b/app/src/main/res/layout/activity_crear_gasto_favorito.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/activity_crear_gasto_favorito_sp_categoria"
             android:layout_centerInParent="true"
-            android:entries="@array/categorias" />
+            android:entries="@array/periodo" />
     </RelativeLayout>
 
     <RelativeLayout
