--- a/app/src/main/res/layout/activity_historial_gastos_completo.xml
+++ b/app/src/main/res/layout/activity_historial_gastos_completo.xml
@@ -4,82 +4,134 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="none"
-            android:text="@string/categoria"
-            android:textColor="#ff73a092"
-            android:textSize="@dimen/abc_text_size_medium_material"
-            android:textStyle="bold"
-            android:layout_margin="10dp"
-            android:layout_gravity="center" />
-        <Spinner android:id="@+id/historial_gastos_lista_categoria"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_historial"
-            android:clickable="true"
-            android:layout_gravity="center"
-            android:entries="@array/categorias"
-            android:hint="@string/categoria"
-            android:prompt="@string/categoria"/>
+        android:layout_height="wrap_content">
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="none"
-            android:text="@string/dia_o_mes"
-            android:textColor="#ff73a092"
-            android:textSize="@dimen/abc_text_size_medium_material"
-            android:textStyle="bold"
-            android:layout_margin="10dp"
-            android:layout_gravity="center" />
-        <Spinner android:id="@+id/historial_gastos_lista_dia_o_mes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_historial"
-            android:clickable="true"
+            android:orientation="horizontal"
             android:layout_gravity="center"
-            android:entries="@array/categorias"
-            android:hint="@string/dia_o_mes"
-            android:prompt="@string/dia_o_mes"/>
-    </LinearLayout>
+            android:gravity="left"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
-    <LinearLayout
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                android:text="@string/fecha_desde"
+                android:textColor="#ff73a092"
+                android:textSize="@dimen/abc_text_size_medium_material"
+                android:textStyle="bold"
+                android:layout_marginLeft="10dp" />
+            <EditText
+                android:id="@+id/activity_historial_fecha_desde"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/abc_text_size_medium_material"
+                android:inputType="date"
+                android:layout_marginLeft="5dp" />
+            <ImageButton
+                android:id="@+id/activity_historial_fecha_desde_date_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="mostrarDatePickerFechaDesde"
+                android:src="@drawable/ic_calendar"
+                android:layout_marginLeft="10dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                android:text="@string/fecha_hasta"
+                android:textColor="#ff73a092"
+                android:textSize="@dimen/abc_text_size_medium_material"
+                android:textStyle="bold"
+                android:layout_marginRight="5dp" />
+            <EditText
+                android:id="@+id/activity_historial_fecha_hasta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/abc_text_size_medium_material"
+                android:inputType="date"
+                android:layout_marginRight="10dp" />
+            <ImageButton
+                android:id="@+id/activity_historial_fecha_hasta_date_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="mostrarDatePickerFechaHasta"
+                android:src="@drawable/ic_calendar"
+                android:layout_marginBottom="10dp" />
+        </LinearLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-        <TextView
+        android:layout_height="wrap_content">
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="none"
-            android:text="@string/dia_o_mes"
-            android:textColor="#ff73a092"
-            android:textSize="@dimen/abc_text_size_medium_material"
-            android:textStyle="bold"
-            android:layout_margin="10dp"
-            android:layout_gravity="center" />
-        <Spinner android:id="@+id/historial_gastos_lista_"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_historial"
-            android:clickable="true"
+            android:orientation="horizontal"
             android:layout_gravity="center"
-            android:entries="@array/categorias"
-            android:hint="@string/dia_o_mes"
-            android:prompt="@string/dia_o_mes"/>
-    </LinearLayout>
+            android:gravity="left"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                android:text="@string/categoria"
+                android:textColor="#ff73a092"
+                android:textSize="@dimen/abc_text_size_medium_material"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp" />
+            <Spinner android:id="@+id/historial_gastos_lista_categoria"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_historial"
+                android:clickable="true"
+                android:layout_gravity="center"
+                android:entries="@array/categorias_busqueda"
+                android:hint="@string/categoria"
+                android:prompt="@string/categoria"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="1dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:gravity="right">
+            <Button
+                android:id="@+id/activity_historial_buscar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/boton_buscar" />
+        </LinearLayout>
+    </RelativeLayout>
 
     <ListView android:id="@+id/historial_gastos_lista_2"
         android:layout_width="match_parent"
