--- a/app/src/main/res/layout/historial_gastos_list_item.xml
+++ b/app/src/main/res/layout/historial_gastos_list_item.xml
@@ -6,7 +6,8 @@
     android:layout_height="fill_parent"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:orientation="vertical"
-    android:layout_marginBottom="5dp">
+    android:layout_marginBottom="5dp"
+    android:onClick="tratarGasto">
 
     <LinearLayout
         android:layout_width="fill_parent"
