--- a/app/src/main/res/layout/activity_crear_gasto_programable.xml
+++ b/app/src/main/res/layout/activity_crear_gasto_programable.xml
@@ -12,7 +12,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/activity_crear_gasto_programable_rl_repeticion"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
         <Spinner
             android:layout_width="wrap_content"
@@ -20,6 +21,7 @@
             android:id="@+id/activity_crear_gasto_programable_sp_repeticion"
             android:entries="@array/repeticion"
             android:layout_centerInParent="true" />
+
     </RelativeLayout>
 
     <RelativeLayout
