--- a/app/src/main/res/layout/activity_tratar_gasto_favorito.xml
+++ b/app/src/main/res/layout/activity_tratar_gasto_favorito.xml
@@ -4,22 +4,21 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true"
-    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoFavoritoActivity"
-    android:id="@+id/activity_crear_gasto_favorito_ll_main"
-    android:orientation="vertical">
+    tools:context="com.funebunny.xpdroid.main.ui.activity.TratarGastoFavoritoActivity"
+    android:orientation="vertical"
+    android:id="@+id/activity_tratar_gasto_favorito_ll_main">
+
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/activity_crear_gasto_favorito_rl_descripcion"
+        android:id="@+id/activity_tratar_gasto_favorito_rl_descripcion"
         android:layout_weight="1">
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/activity_crear_gasto_favorito_et_descripcion"
+            android:id="@+id/activity_tratar_gasto_favorito_et_descripcion"
             android:layout_centerInParent="true"
             android:hint="@string/descripcion" />
     </RelativeLayout>
@@ -27,13 +26,13 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/activity_crear_gasto_favorito_rl_categoria"
+        android:id="@+id/activity_tratar_gasto_favorito_rl_categoria"
         android:layout_weight="1">
 
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/activity_crear_gasto_favorito_sp_categoria"
+            android:id="@+id/activity_tratar_gasto_favorito_sp_categoria"
             android:layout_centerInParent="true"
             android:entries="@array/categorias" />
     </RelativeLayout>
@@ -41,7 +40,7 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/activity_crear_gasto_favorito_rl_importe"
+        android:id="@+id/activity_tratar_gasto_favorito_rl_importe"
         android:layout_weight="1">
 
         <EditText
@@ -49,24 +48,39 @@
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
-            android:id="@+id/activity_crear_gasto_favorito_et_importe"
+            android:id="@+id/activity_tratar_gasto_favorito_et_importe"
             android:layout_centerInParent="true"
             android:hint="@string/importe" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/activity_crear_gasto_favorito_rl_guardar"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:id="@+id/activity_tratar_gasto_favorito_ll_opciones">
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/guardar"
-            android:id="@+id/activity_crear_gasto_favorito_bt_guardar"
-            android:layout_centerInParent="true"
-            android:onClick="guardarGastoFavorito" />
-    </RelativeLayout>
+            android:text="@string/actualizar"
+            android:id="@+id/activity_tratar_gasto_favorito_bt_actualizar"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:onClick="actualizarGastoFavorito" />
 
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/eliminar"
+            android:id="@+id/activity_tratar_gasto_favorito_bt_eliminar"
+            android:layout_alignTop="@+id/button2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:onClick="eliminarGastoFavorito" />
+    </LinearLayout>
 </LinearLayout>
