--- a/app/src/main/res/layout/fragment_objetivositem_list.xml
+++ b/app/src/main/res/layout/fragment_objetivositem_list.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.funebunny.xpdroid.main.ui.fragment.ObjetivosItemFragment">
+    tools:context="com.funebunny.xpdroid.main.ui.fragment.ObjetivosItemFragment"
+    android:orientation="vertical"
+    android:id="@+id/fragment_objetivositem_list_ll_main">
 
-    <ListView android:id="@android:id/list" android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <TextView android:id="@+id/fragment_objetivositem_list_tv_titulo" android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:gravity="center"
+        android:layout_margin="10dp"
+        android:text="@string/objetivos_titulo"
+        android:textColor="#ff0000ff"
+        android:textSize="@dimen/abc_text_size_medium_material"
+        android:textStyle="bold|italic" />
 
-    <TextView android:id="@android:id/empty" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:gravity="center" />
+    <ListView android:id="@+id/fragment_objetivositem_list_lv_lista" android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp" />
 
-</FrameLayout>
+</LinearLayout>
