--- a/app/src/main/res/layout/activity_tratar_objetivo.xml
+++ b/app/src/main/res/layout/activity_tratar_objetivo.xml
@@ -46,7 +46,7 @@
         android:layout_weight="1">
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/actualizar"
             android:id="@+id/activity_tratar_objetivo_bt_actualizar"
@@ -55,7 +55,7 @@
             android:onClick="actualizarObjetivo" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/eliminar"
             android:id="@+id/activity_tratar_objetivo_bt_eliminar"
