--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,10 +8,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:rowCount="1"
-    tools:context=".MainActivity$PlaceholderFragment">
+    tools:context=".MainActivity$PlaceholderFragment"
+    android:id="@+id/fragment_main_fl_main">
 
     <GridView
-        android:id="@+id/gridView"
+        android:id="@+id/fragment_main_gv_favoritos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center" />
