--- a/app/src/main/res/layout/gastos_favoritos_list_item.xml
+++ b/app/src/main/res/layout/gastos_favoritos_list_item.xml
@@ -6,8 +6,10 @@
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:orientation="vertical"
     android:layout_marginBottom="5dp"
-    android:onClick="tratarGastoFavorito"
-    android:longClickable="false">
+    android:longClickable="true"
+    android:clickable="true"
+    android:focusable="false"
+    android:focusableInTouchMode="false">
 
     <LinearLayout
         android:layout_width="fill_parent"
